fix: bot tester z-index

--- a/src/styles/botTester.scss
+++ b/src/styles/botTester.scss
@@ -8,7 +8,7 @@
   background-color: $grayWhite;
   border: 1px solid $gray200;
   border-radius: rem(12);
-  z-index: 100;
+  z-index: 300;
   // &.editDrawerOpen {
   //   right: rem(365);
   // }
